# llmmw-capstone

./: .gitignore  example.py  test.py
client/: client.py
client/websockets-client/: package-lock.json  package.json
client/websockets-client/src/: App.js
repo/: api.py  main.py  mw2.py  mw_base.py  test.ipynb  test.sh
repo/mw_codes/: python310_verify.py
repo/post_mw_codes/: python310_verify.py  python36_verify.py  wikisummary.py
repo/pre_mw_codes/: personal_info.py
server/: main.py  middleware.py  practice.ipynb  pyproject.toml  utils.py
server/llmprovider/: chatgpt.py  mock.py  openai_key.txt
venv-3.6.15/: pyproject.toml
