[tool.poetry]
name = "capstone"
version = "0.1.0"
description = ""
authors = ["sejeonglee <sejeonglee2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^11.0.3"
openai = "^0.27.8"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.17.4"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
